# wxwidgets-quickstart-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-ci.yml  cpplint.yml
ReseauInterurbain/: ReseauInterurbain.sln  ReseauInterurbain.vcxproj  ReseauInterurbain.vcxproj.filters
ReseauInterurbain/src/: App.h
ReseauInterurbain/src/domain/controller/: PlaneGraphics.cpp  PlaneGraphics.h
ReseauInterurbain/src/gui/: DrawPanel.cpp  DrawPanel.h  MainWindowFrame.cpp  MainWindowFrame.h
docs/doxygen/: Doxyfile
src/: App.cc  App.cpp  App.h  CMakeLists.txt  Version.h.in
src/domain/controller/: ControllerInput.cc  ControllerInput.cpp  ControllerInput.h  ControllerOutput.cc  ControllerOutput.cpp  ControllerOutput.h  Model.cc  Model.cpp  Model.h
src/domain/reseau/: Arc.h  Graph.cc  Graph.cpp  Graph.h  Graphe.cpp  Graphe.h  Node.cc  Node.cpp  Node.h  ReseauInterurbain.cc  ReseauInterurbain.cpp  ReseauInterurbain.h
src/gui/: DrawPanel.cpp  DrawPanel.h  MainWindowFrame.cc  MainWindowFrame.cpp  MainWindowFrame.h  View.cc  View.cpp  View.h
src/ui/: MainWindowFrame.cc  MainWindowFrame.h
test/: CMakeLists.txt  CMakelists.txt  NodeTest.cc  NodeTest.cpp
tests/: CMakeLists.txt  SampleTest.cc
